--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,7 +37,7 @@ spring.servlet.multipart.location=D:/data/
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=1000MB
 # properties 변수
-part4.upload-path=D:/data/
+part4.upload-path=D:/dev/data/
 
 
 
